--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -25,22 +25,24 @@ html
     meta(name='msapplication-TileColor', content='#ffffff')
     meta(name='msapplication-TileImage', content='/mstile-144x144.png')
       
-    meta(name='description' content='A beautiful desktop client for Facebook Messenger. Chat without being distracted by your feed or notifications on OS X, Windows and Linux.')
+    meta(name='description' content='A simple & beautiful app for Facebook Messenger. Chat without distractions on any OS.')
     meta(name='keywords' content='facebook, messenger, chat, conversations, desktop, client, download')
 
     meta(name='author' content='aluxian.com')
     meta(name='copyright' content='aluxian.com')
     meta(name='application-name' content='Messenger for Desktop')
-
+      
+    meta(property='og:title' content='Messenger for Desktop')
+    meta(property='og:description' content='A simple & beautiful app for Facebook Messenger. Chat without distractions on any OS.')
     meta(property='og:type' content='website')
-    meta(property='og:image' content='http://messengerfordesktop.com/thumbnail_mac.png')
+    meta(property='og:image' content='http://messengerfordesktop.com/img/preview.jpg')
     meta(property='og:url' content='http://messengerfordesktop.com')
     meta(property='fb:admins' content='100000476749759')
     meta(property='fb:app_id' content='1035250486503839')
 
     meta(name='twitter:card' content='summary_large_image')
     meta(name='twitter:creator' content='@aluxian')
-    meta(name='twitter:image' content='http://messengerfordesktop.com/preview.png')
+    meta(name='twitter:image' content='http://messengerfordesktop.com/img/preview.jpg')
     
     script.
       if (document.location.host == 'aluxian.github.io') {
