--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -65,7 +65,7 @@ html
       
     section#header
       .container
-        .svg.logo
+        a.svg.logo(href='/')
           include ../svg/logo.svg
           
         h1.title Messenger for Desktop
@@ -199,7 +199,7 @@ html
         
         ul
           li.widget
-            .fb-like(data-href='http://messengerfordesktop.com/' data-share='true')
+            .fb-like(data-href='http://messengerfordesktop.com/' data-share='true' data-width='300')
               
           li.widget
             a.twitter-share-button(
