--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -226,7 +226,7 @@ html
     footer
       .container
         p.left No affiliation with Facebook. Some images taken from #[a(href='https://www.messenger.com/') messenger.com]
-        p.right Created by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
+        p.right Created with &hearts; by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
 
         
     // inject:js
