adds donation button

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -180,6 +180,7 @@ html
           li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop') VIEW ON GITHUB
           li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/issues') ISSUE/REQUEST
           li: a.button.bordered(href='http://www.aluxian.com') CONTACT DEV
+          li: a.button.bordered(href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=CJBNT84F29QVU' target='_blank') DONATE
     
     section.blue#contact
       .container
@@ -227,7 +228,6 @@ html
       .container
         p.left No affiliation with Facebook. Some images taken from #[a(href='https://www.messenger.com/') messenger.com]
         p.right Created with &hearts; by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
-
         
     // inject:js
     
