--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -118,7 +118,7 @@ html
                 img(src='img/tile_6.png' width='120' height='120')
                 p.description Chat with your favorite groups.
           
-        a.button.bordered(href='https://www.messenger.com/') Explore on messenger.com
+        a.button.bordered(href='https://www.messenger.com/' target='_blank') Explore on messenger.com
         
     section.blue#features
       .container
@@ -139,23 +139,23 @@ html
         h1.title Download
         
       ul.container
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.3.3/Messenger.dmg')
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.0/Messenger.dmg')
           span.osx
             include ../svg/apple.svg
             span OS X 10.7+
             
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.3.3/MessengerSetup.exe')
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.0/MessengerSetup.exe')
           span
             include ../svg/windows.svg
             span Windows
         
       ul.container
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.3.3/Messenger_linux32.deb')
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.0/Messenger_linux32.deb')
           span
             include ../svg/debian.svg
             span Linux 32
         
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.3.3/Messenger_linux64.deb')
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.0/Messenger_linux64.deb')
           span
             include ../svg/debian.svg
             span Linux 64
@@ -165,11 +165,11 @@ html
         h1.title Featured on
         
         ul
-          li: a(href='http://www.chip.de/downloads/Messenger-for-Desktop_78045560.html')
+          li: a(target='_blank' href='http://www.chip.de/downloads/Messenger-for-Desktop_78045560.html')
             include ../svg/chip.svg
-          li: a(href='http://www.producthunt.com/posts/messenger-for-desktop')
+          li: a(target='_blank' href='http://www.producthunt.com/posts/messenger-for-desktop')
             include ../svg/producthunt.svg
-          li: a(href='http://messenger-for-desktop.en.softonic.com')
+          li: a(target='_blank' href='http://messenger-for-desktop.en.softonic.com')
             img(src='img/softonic.png' width='153' height='33')
     
     section#contribute
