Changes fb likebox to pagebox

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -200,7 +200,10 @@ html
         
         ul
           li.widget
-            .fb-like(data-href='http://messengerfordesktop.com/' data-share='true' data-width='300')
+            .fb-page(data-href='https://www.facebook.com/MessengerforDesktopOfficial' data-show-facepile='true' data-show-posts='false')
+              .fb-xfbml-parse-ignore
+                blockquote(cite='https://www.facebook.com/MessengerforDesktopOfficial')
+                  a(href='https://www.facebook.com/MessengerforDesktopOfficial') Messenger for Desktop
               
           li.widget
             a.twitter-share-button(
