--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -240,16 +240,8 @@ section#share
   li.widget
     margin-bottom: 30px
 
-    iframe
+    iframe:not(:first-child)
       margin-left: 15px
-
-      &:first-child
-       margin-left: 15px
-
-  .fb-like iframe
-    margin: 0
-    width: 300px
-    overflow: hidden
 
 footer
   background-color: #323940
