Subtitle style fix

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -128,13 +128,13 @@ html
         ul.clearfix
           li
             img(src='img/feature-1.jpg' width='230' height='200')
-            span.subtitle Launch on#[br]OS startup
+            .subtitle Launch on#[br]OS startup
           li
             img(src='img/feature-2.jpg' width='230' height='200')
-            span.subtitle Native#[br]Notifications
+            .subtitle Native#[br]Notifications
           li
             img(src='img/feature-3.jpg' width='230' height='200')
-            span.subtitle Custom#[br]Themes
+            .subtitle Custom#[br]Themes
       
     section#download
       .container
