Adds flattr button; closes #120

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -243,6 +243,22 @@ section#share
     iframe:not(:first-child)
       margin-left: 15px
 
+    iframe
+      border: none
+
+    &.row1
+      min-height: 224px
+
+    &.row2
+      height: 28px
+
+    &.row3
+      height: 20px
+
+    .fb-send
+      position: relative
+      top: -3px
+
 footer
   background-color: #323940
 
