--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -204,13 +204,13 @@ html
         h2.title Spread the love
         
         ul
-          li.widget
+          li.widget.row1
             .fb-page(data-href='https://www.facebook.com/MessengerforDesktopOfficial' data-show-facepile='true' data-show-posts='false')
               .fb-xfbml-parse-ignore
                 blockquote(cite='https://www.facebook.com/MessengerforDesktopOfficial')
                   a(href='https://www.facebook.com/MessengerforDesktopOfficial') Messenger for Desktop
               
-          li.widget
+          li.widget.row2
             a.twitter-share-button(
               href='https://twitter.com/share'
               data-size='large'
@@ -226,11 +226,10 @@ html
               data-count-api='/repos/Aluxian/Facebook-Messenger-Desktop#stargazers_count'
               data-count-aria-label='# stargazers on GitHub'
               aria-label='Star Messenger for Desktop on GitHub') Star
-          li.widget
+          
+          li.widget.row3
             .fb-send(data-href='http://messengerfordesktop.com/')
-            
-            a.gratipay(href='//gratipay.com/~Aluxian/' target='_blank')
-              img(src='//img.shields.io/gratipay/Aluxian.svg' alt='GratiPay')
+            iframe(src='//api.flattr.com/button/view/?uid=Aluxian&button=compact&url=http%3A%2F%2Fmessengerfordesktop.com' title='Flattr' height='20' width='110')
     
     .footer-image
     
