--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -119,7 +119,7 @@ section#messenger-features
     .description
       margin-top: 0
       font-size: 18px
-      color: black
+      color: #333
 
 section#features
   li
@@ -205,7 +205,7 @@ section#contact
       width: 100%
 
   .email
-    color: black
+    color: #333
 
     @include media($mobile)
       border-top-left-radius: 2px
