Combines some images into spritesheets

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -90,34 +90,34 @@ html
           li
             .tile
               a(href='https://www.messenger.com/features#texts')
-                img(src='img/tile_1.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-1
                 p.description Know when people have seen your texts.
           li
             .tile
               a(href='https://www.messenger.com/features#hdcalls')
-                img(src='img/tile_2.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-2
                 p.description Make HD calls anywhere in the world.
           li
             .tile
               a(href='https://www.messenger.com/features#photos')
-                img(src='img/tile_3.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-3
                 p.description Snap photos and shoot videos.
 
         ul.container
           li
             .tile
               a(href='https://www.messenger.com/features#stickers')
-                img(src='img/tile_4.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-4
                 p.description Choose from thousands of stickers.
           li
             .tile
               a(href='https://www.messenger.com/features#voicemessages')
-                img(src='img/tile_5.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-5
                 p.description Record voice messages.
           li
             .tile
               a(href='https://www.messenger.com/features#groups')
-                img(src='img/tile_6.png' width='120' height='120' alt='Feature Preview')
+                span.tile-sprite.tile-sprite-6
                 p.description Chat with your favorite groups.
           
         a.button.bordered(href='https://www.messenger.com/' target='_blank') Explore on messenger.com
@@ -127,13 +127,13 @@ html
         h2.title Integrated with your OS
         ul.clearfix
           li
-            img(src='img/feature-1.jpg' width='230' height='200')
+            span.feature.feature-1
             .subtitle Launch on#[br]OS startup
           li
-            img(src='img/feature-2.jpg' width='230' height='200')
+            span.feature.feature-2
             .subtitle Native#[br]Notifications
           li
-            img(src='img/feature-3.jpg' width='230' height='200')
+            span.feature.feature-3
             .subtitle Custom#[br]Themes
       
     section#download
