Add alternative download link

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -161,6 +161,10 @@ html
           span
             include ../svg/debian.svg
             span Linux 64
+            
+      .container
+        p
+        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub instead
     
     section.blue#featured
       .container
