--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -253,6 +253,12 @@ html
     
     //- GitHub
     script(async defer id='github-bjs' src='https://buttons.github.io/buttons.js')
+      
+    //- HelloBar
+    script(async src='//my.hellobar.com/3227dce33fbac65d34ae12a646acb5813d715cc5.js')
+      
+    //- AddThis
+    script(async src='//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f3e264b364b047d')
     
     //- Google Analytics
     script.
