Add links to softpedia and filehorse

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -170,7 +170,7 @@ html
       .container
         h2.title Featured on
         
-        ul
+        ul.row1
           li
             a(target='_blank' href='http://www.chip.de/downloads/Messenger-for-Desktop_78045560.html' title='CHIP')
               include ../svg/chip.svg
@@ -179,7 +179,15 @@ html
               include ../svg/producthunt.svg
           li
             a(target='_blank' href='http://messenger-for-desktop.en.softonic.com' title='Softonic')
-              img(src='img/softonic.png' width='153' height='33' alt='Softonic')
+              img(src='img/softonic.png' height='33' alt='Softonic')
+        
+        ul.row2
+          li
+            a(target='_blank' href='http://www.softpedia.com/get/Internet/Chat/Instant-Messaging/WhatsApp-for-Desktop.shtml' title='Softpedia')
+              img(src='img/softpedia.png' height='33' alt='Softpedia')
+          li
+            a(target='_blank' href='http://www.filehorse.com/download-messenger-for-desktop/?utm_medium=win&utm_source=messengerfordesktop.com&utm_campaign=MessengerForDesktop' title='FileHorse')
+              img(src='img/filehorse.png' height='33' alt='FileHorse')
     
     section#contribute
       .container
