--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -164,13 +164,26 @@ section#download
     font-size: 20px
 
 section#featured
-  li
-    @include media($desktop)
-      @include span-columns(4)
-
   li + li
     @include media($mobile)
       margin-top: 30px
+
+  ul + ul
+    @include media($mobile)
+      margin-top: 30px
+
+  ul.row1
+    @include media($desktop)
+      li
+        @include span-columns(4)
+
+  ul.row2
+    @include media($desktop)
+      @include shift(2)
+      padding-top: 60px
+
+      li
+        @include span-columns(5)
 
   svg
     height: 33px
