Add beta version

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -139,6 +139,9 @@ html
     section#download
       .container
         h2.title Download
+
+      .container
+        h3.title Stable
         
       ul.container
         li: a.button.bordered#fhosx(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.3/Messenger.dmg' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Mac', eventLabel: this.getAttribute('galabel')})" galabel='GitHub')
@@ -152,19 +155,55 @@ html
             span Windows
         
       ul.container
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.3/Messenger_linux32.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux32', eventLabel: 'GitHub'})")
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.3/Messenger_linux32.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux32DEB', eventLabel: 'GitHub'})")
           span
             include ../svg/debian.svg
-            span Linux 32
+            span Linux 32 (DEB)
         
-        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.3/Messenger_linux64.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux64', eventLabel: 'GitHub'})")
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.3/Messenger_linux64.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux64DEB', eventLabel: 'GitHub'})")
           span
             include ../svg/debian.svg
-            span Linux 64
-            
+            span Linux 64 (DEB)
+          
       .container
-        p
-        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub instead
+        h3.title Beta
+        
+      ul.container
+        li: a.button.bordered#fhosx(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/Messenger.dmg' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Mac', eventLabel: this.getAttribute('galabel')})" galabel='GitHub')
+          span.osx
+            include ../svg/apple.svg
+            span OS X 10.7+
+            
+        li: a.button.bordered#fhwin(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/MessengerSetup.exe' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Windows', eventLabel: this.getAttribute('galabel')})" galabel='GitHub')
+          span
+            include ../svg/windows.svg
+            span Windows
+        
+      ul.container
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/Messenger_linux32.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux32DEB', eventLabel: 'GitHub'})")
+          span
+            include ../svg/debian.svg
+            span Linux 32 (DEB)
+        
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/Messenger_linux64.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux64DEB', eventLabel: 'GitHub'})")
+          span
+            include ../svg/debian.svg
+            span Linux 64 (DEB)
+
+      ul.container
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/Messenger_linux32.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux32RPM', eventLabel: 'GitHub'})")
+          span
+            include ../svg/rpm.svg
+            span Linux 32 (RPM)
+        
+        li: a.button.bordered(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/download/v1.4.8/Messenger_linux64.deb' onclick="ga('send', 'event', {eventCategory: 'Download', eventAction: 'Linux64RPM', eventLabel: 'GitHub'})")
+          span
+            include ../svg/rpm.svg
+            span Linux 64 (RPM)
+
+      .container
+          p
+          a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub instead
     
     section.blue#featured
       .container
