--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -139,6 +139,10 @@ section#features
       box-shadow: rgba(0, 0, 0, 0.2) 0 0 3px 1px
 
 section#download
+  .title
+    margin-top: 30px
+    margin-bottom: 20px
+
   svg
     height: 20px
     margin-right: 5px
@@ -149,7 +153,7 @@ section#download
     bottom: -1px
 
   ul.container
-    max-width: 440px
+    max-width: 500px
   li
     @include span-columns(6)
     padding: 0 5px 20px
