--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -139,9 +139,8 @@ section#features
       box-shadow: rgba(0, 0, 0, 0.2) 0 0 3px 1px
 
 section#download
-  .title
-    margin-top: 30px
-    margin-bottom: 20px
+  .subtitle
+    font-weight: normal
 
   svg
     height: 20px
