Reorder featured-on badges

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -202,8 +202,8 @@ html
             span Linux 64 (RPM)
 
       .container
-          p
-          a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub instead
+        p
+        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub
     
     section.blue#featured
       .container
@@ -211,11 +211,11 @@ html
         
         ul.row1
           li
-            a(target='_blank' href='http://www.chip.de/downloads/Messenger-for-Desktop_78045560.html' title='CHIP')
-              include ../svg/chip.svg
-          li
             a(target='_blank' href='http://www.producthunt.com/posts/messenger-for-desktop' title='ProductHunt')
               include ../svg/producthunt.svg
+          li
+            a(target='_blank' href='http://www.chip.de/downloads/Messenger-for-Desktop_78045560.html' title='CHIP')
+              include ../svg/chip.svg
           li
             a(target='_blank' href='http://messenger-for-desktop.en.softonic.com' title='Softonic')
               img(src='img/softonic.png' height='33' alt='Softonic')
